[package]
authors = ["DatenLord <dev@datenlord.io>"]
categories = ["tools"]
description = "rangeset that can merge overlapping ranges (fork of merged_range)"
edition = "2021"
keywords = ["overlap", "range", "merge", "rangeset"]
license = "Apache-2.0"
name = "merged_range2"
readme = "README.md"
repository = "https://github.com/dlight/merged_range2"
homepage = "https://github.com/dlight/merged_range2"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clippy-utilities = "0.2.0"
